--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,17 @@
     "angular-sanitize": "^1.5.5",
     "angular-touch": "^1.5.5",
     "angular-material": "^1.0.6",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-material-sidenav-menu": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.5"
   },
   "appPath": "app",
-  "moduleName": "autoApp"
+  "moduleName": "autoApp",
+  "resolutions": {
+    "angular": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "angular-material": "^1.0.6"
+  }
 }
