--- a/bower.json
+++ b/bower.json
@@ -11,16 +11,11 @@
     "angular-touch": "^1.5.5",
     "angular-material": "^1.0.6",
     "angular-ui-router": "^0.2.18",
-    "angular-material-sidenav-menu": "*"
+    "angular-material-sidenav": "^0.0.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.5"
   },
   "appPath": "app",
-  "moduleName": "autoApp",
-  "resolutions": {
-    "angular": "^1.5.5",
-    "angular-route": "^1.5.5",
-    "angular-material": "^1.0.6"
-  }
+  "moduleName": "autoApp"
 }
