--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-material": "^1.0.6",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-bootstrap": "^1.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
